src/objects/Bot_Command__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pattern__c</fullName>
        <label>Invocation Pattern</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Utterance__c</fullName>
        <label>Sample Utterance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>